fix(github): text readablity at actions startup

--- a/styles/github/catppuccin.user.css
+++ b/styles/github/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Github Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/github
 @homepageURL 	https://github.com/catppuccin/userstyles/tree/main/styles/github
-@version        1.2.1
+@version        1.2.2
 @description    Soothing pastel theme for GitHub
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/github/catppuccin.user.css
@@ -297,11 +297,11 @@
       --color-checks-header-label-open-text: @accent-color;
       --color-checks-header-border: @surface0;
       --color-checks-header-icon: @text;
-      --color-checks-line-text: @base;
-      --color-checks-line-num-text: @base;
-      --color-checks-line-timestamp-text: @base;
+      --color-checks-line-text: @subtext0;
+      --color-checks-line-num-text: @subtext0;
+      --color-checks-line-timestamp-text: @subtext0;
       --color-checks-line-hover-bg: @surface0;
-      --color-checks-line-selected-bg: #dc2286;
+      --color-checks-line-selected-bg: @surface0;
       --color-checks-line-selected-num-text: #dc2286;
       --color-checks-line-dt-fm-text: #dc2286;
       --color-checks-line-dt-fm-bg: #dc2286;
@@ -665,12 +665,24 @@
     }
     
     /* Create PR button & New branch button */
-    .iRoQzU, .ifkUYV {
+    .iRoQzU, .ifkUYV, .bOZDzN {
       background-color: @green;
       color: @base;
     }
     
-    /* Compare button */
+    /* New branch dialog */
+    .jenxrv {
+      background-color: @mantle;
+      color: @text;
+    }
+    
+    /* Branch drop down */
+    .fHiIQb {
+      background-color: @surface0;
+    }
+    
+    /* Compare button & Cancel new branch button */
+    .idPXPh,
     .epAEYw {
       background-color: @surface0;
       color: @text;
